<resources>
    <string name="app_name">standstatsgenerator</string>
    <string name="edit_diagram">Edit Diagram</string>
    <string name="apply">Apply</string>
    <string name="randomize">Randomize</string>
    <string name="edit_diagram_color">Edit Diagram Color</string>
    <string name="potential">Potential</string>
    <string name="power">Power</string>
    <string name="speed">Speed</string>
    <string name="range">Range</string>
    <string name="durability">Durability</string>
    <string name="precision">Precision</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
</resources>
