<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="Edit" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potential" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/potentialRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#92A8E5"
                app:rb_selectedBarColor="#5B7DDF" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/powerRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#ECBDAA"
                app:rb_selectedBarColor="#EB9E84" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/speedRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#EEDDBC"
                app:rb_selectedBarColor="#ECCB8E" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/rangeRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#E4B7C9"
                app:rb_selectedBarColor="#D18BA8" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durability" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/durabilityRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#BDB5E7"
                app:rb_selectedBarColor="#7A72A9" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

            <TextView
                style="@style/TextAppearance.AppCompat.EditDiagramStatisticNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precision" />

            <com.antonpopoff.standcharacteristicsgenerator.views.CharacteristicRatingBar
                style="@style/EditDiagramCharacteristicRatingBar"
                android:id="@+id/precisionRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rb_barColor="#A5B3C5"
                app:rb_selectedBarColor="#475567" />

            <View
                style="@style/EditDiagramDivider"
                android:layout_width="match_parent"
                android:layout_height="1px" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
